removed java 9 methods for java 8 compatibility